Urunler sayfasi guncellendi

--- a/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
@@ -19,3 +19,9 @@
 <script src="/scripts/jquery.dataTables.min.js"></script>
 <script src="/scripts/dataTables.bootstrap4.min.js"></script>
 {{ end }}
+
+{{ if eq .Params.title "Açık Kaynak Ürün Ailesi" }}
+<link rel="stylesheet" href="/scripts/dataTables.bootstrap4.min.css">
+<script src="/scripts/jquery.dataTables.min.js"></script>
+<script src="/scripts/dataTables.bootstrap4.min.js"></script>
+{{ end }}
