--- a/hugo/themes/aciklab-hugo/layouts/partials/about.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/about.html
@@ -2,14 +2,9 @@
 <section id="about">
     <div class="container">
         <div class="row egitim-row aos-init aos-animate" data-aos="fade-up">
-            <!-- <div class="col-lg-6 col-12 px-0 pb-5 d-flex justify-content-center align-items-center">
-                <a class="venobox" data-autoplay="true" data-vbtype="video" href="{{ $about.video_link }}">
-                    <img src="{{ (resources.Get (printf "/images/%s" $about.thumbnail)).RelPermalink }}" class="img-fluid" />
-                </a>
-            </div> -->
-            <div class="col-lg-12 col-12 d-flex flex-column align-items-center align-items-lg-start">
-                <h1 class="text-center w-100">Vizyonumuz</h1>
-                <p class="text-center">Kuruluş amacının getirdiği sorumlulukla; açık kaynak projeler geliştirerek, varolan açık kaynak projelere destek vererek, açık kaynak ekosisteminin gelişmesine katkıda bulunarak Türkiye’de ve dünyada lider bir şirket olmak.
+            <div class="col-lg-12 col-12 d-flex flex-column align-items-center align-items-lg-start"
+                 style="font-size: 24px; font-weight: 600; padding: 40px 15px;">
+                <p class="text-center">HAVELSAN Açıklab kuruluş amacının getirdiği sorumlulukla; açık kaynak projeler geliştirerek, varolan açık kaynak projelere destek vererek, açık kaynak ekosisteminin gelişmesine katkıda bulunarak Türkiye’de ve dünyada lider bir şirket olmayı vizyonu olarak hedeflemiştir.
                 </p>
             </div>
         </div>
