--- a/hugo/themes/aciklab-hugo/layouts/_default/home_post.html
+++ b/hugo/themes/aciklab-hugo/layouts/_default/home_post.html
@@ -1,6 +1,6 @@
 {{ $dateFormat := "02/01/2006" }}
 
-<article class="blog-post col-lg-3 mb-5" data-aos="fade-up">
+<article class="blog-post col-lg-4 mb-5" data-aos="fade-up" style="position: relative;">
   <header>
     <h4 class="blog-post-title" style="font-weight: 600;" dir="auto"><a href="{{ .Permalink }}" >{{ .Title | markdownify }}</a></h4>
     <div class="blog-post-meta mb-3 w-100">
@@ -11,5 +11,6 @@
     </div>
   </header>
   {{ .Summary | truncate 250 }}
-  <a href='{{ .Permalink }}'  class="d-block mt-2 font-weight-bold"><i class="fa fa-chevron-right mr-2"></i>Devamını oku...</a>
+  <div style="display: block; margin-top: 30px;"></div>
+  <a style="position: absolute; bottom: 0;" href='{{ .Permalink }}'  class="d-block mt-2 font-weight-bold"><i class="fa fa-chevron-right mr-2"></i>Devamını oku...</a>
 </article>
