--- a/hugo/themes/aciklab-hugo/layouts/index.html
+++ b/hugo/themes/aciklab-hugo/layouts/index.html
@@ -9,7 +9,9 @@
     {{ end }}
 
     {{ partial "banner.html" . }}
+    {{ partial "plans.html" . }}
     {{ partial "home_posts.html" . }}
-    {{ partial "brands.html" . }}
+    
+    <div class="mb-5"></div>
 </main>
 {{ end }}
