--- a/hugo/themes/aciklab-hugo/layouts/_default/home_post.html
+++ b/hugo/themes/aciklab-hugo/layouts/_default/home_post.html
@@ -4,7 +4,7 @@
   <header>
     <h4 class="blog-post-title" style="font-weight: 600;" dir="auto"><a href="{{ .Permalink }}" >{{ .Title | markdownify }}</a></h4>
     <div class="blog-post-meta mb-3 w-100">
-      <i class="fa fa-calendar mr-2"></i>
+      <i class="fas fa-calendar mr-2"></i>
       <time {{ .Date.Format "2006-01-02T15:04:05Z07:00" | printf "datetime=%q" | safeHTMLAttr }}>
         {{ .Date.Format $dateFormat }}
       </time>
@@ -12,5 +12,5 @@
   </header>
   {{ .Summary | truncate 250 }}
   <div style="display: block; margin-top: 30px;"></div>
-  <a style="position: absolute; bottom: 0;" href='{{ .Permalink }}'  class="d-block mt-2 font-weight-bold"><i class="fa fa-chevron-right mr-2"></i>Devamını oku...</a>
+  <a style="position: absolute; bottom: 0;" href='{{ .Permalink }}'  class="d-block mt-2 font-weight-bold"><i class="fas fa-chevron-right mr-2"></i>Devamını oku...</a>
 </article>
