--- a/hugo/themes/aciklab-hugo/layouts/partials/breadcrumb.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/breadcrumb.html
@@ -1,11 +1,13 @@
-<div class="container mt-3">
+{{ if not .IsHome }}<div class="container mt-3">
     <nav class="row">
         <ol class="breadcrumb" data-aos="fade-right" style="padding-left:0; padding-right: 0; width: 100%; background: transparent;">
             {{ template "breadcrumbnav" (dict "p1" . "p2" .) }}
         </ol>
     </nav>
-    
 </div>
+{{ else }}
+<div class="container mt-1"></div>
+{{ end }}
 
 {{ define "breadcrumbnav" }}
 {{ if .p1.Parent }}
