--- a/hugo/themes/aciklab-hugo/layouts/partials/footer.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/footer.html
@@ -24,34 +24,33 @@
                         </a>
                         {{ end }}
                     </div>
-                    <div class="col-12 mt-3 d-lg-flex justify-content-end align-items-start flex-column d-none">
-                        <a href="https://www.havelsan.com.tr" target="_blank">
-                            <img src="{{ printf "/images/%s" .Site.Params.footer.logo | relURL }}" class="img-fluid" style="margin-top: 20px; max-width: 400px; float: left;"/>
-                        </a>
-                    </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6 mt-3 mt-lg-0">
                 <div class="flex-column text-center text-lg-right">
                     
                     <div class="col-12 mt-2">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3060.4547112298424!2d32.74857581538056!3d39.90883927942742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d347d7a06482c1%3A0xefdb28d118cd754f!2sHavelsan%20YNHT!5e0!3m2!1sen!2str!4v1587992160737!5m2!1sen!2str"
-                                class="embed-responsive-item" allowfullscreen></iframe>
+                        <div class="row">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3060.4547112298424!2d32.74857581538056!3d39.90883927942742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d347d7a06482c1%3A0xefdb28d118cd754f!2sHavelsan%20YNHT!5e0!3m2!1sen!2str!4v1587992160737!5m2!1sen!2str"
+                                    class="embed-responsive-item" allowfullscreen></iframe>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col align-self-end justify-content-end mt-5">
-                        <h3>Adres:</h3>
-                        <p>Bilişim İnovasyon Merkezi Teknokent, Dumplupınar Bulvarı
-                            No:280/G AZ Kat, Kuzeydoğu köşe, 06530 Çankaya</p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 mt-3 text-center d-lg-none">
-                <a href="https://www.havelsan.com.tr" target="_blank">
-                    <img src="{{ printf "/images/%s" .Site.Params.footer.logo | relURL }}" class="img-fluid" />
-                </a>
+            <div class="col-12 footer-brands">
+                <div class="footer-divider m-auto"></div>
+                <br>
+                <div class="float-left">
+                    <img src="/images/footer-logo.png" height="40px" class="mr-3">
+                    <img src="/images/pardus.png" height="50px" class="mr-3">
+                    
+                </div>
+                <div class="float-right">
+                    <img src="/images/tskgv logo.png" height="50px">
+                </div>
             </div>
         </div>
 </footer>
