Footer animasyonu kaldirildi

--- a/hugo/themes/aciklab-hugo/layouts/partials/footer.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
-    <div class="container" data-aos="fade-up">
+    <div class="container">
         <div class="footer-row row py-5">
             <div class="col-12 col-lg-6 d-lg-flex d-block">
                 <div class="row">
