Adres merkez bina ile degistirildi

--- a/hugo/themes/aciklab-hugo/layouts/partials/footer.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/footer.html
@@ -33,7 +33,7 @@
                         <div class="row">
                             <div class="embed-responsive embed-responsive-16by9">
                                 <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2574.101241548641!2d32.76789645148503!3d39.89350864824396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d3463a83f73e2f%3A0x186c7e0dcc4d6fe5!2sHavelsan!5e0!3m2!1str!2str!4v1643187051418!5m2!1str!2str"
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97927.428666277!2d32.70577205820311!3d39.91382080000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d3489d28be7f6d%3A0x9aeae3bc3097caf5!2sHavelsan!5e0!3m2!1str!2str!4v1644400564998!5m2!1str!2str"
                                     class="embed-responsive-item" allowfullscreen></iframe>
                             </div>
                         </div>
