Footer duzenlemesi gerceklestirildi

--- a/hugo/themes/aciklab-hugo/layouts/partials/footer.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/footer.html
@@ -45,12 +45,14 @@
                 <br>
                 <div class="float-left">
                     <img src="/images/footer-logo.png" height="40px" class="mr-3">
-                    <img src="/images/pardus.png" height="50px" class="mr-3">
                     
                 </div>
-                <div class="float-right">
-                    <img src="/images/tskgv logo.png" height="50px">
-                </div>
+                <a href="https://www.tskgv.org.tr" target="_blank">
+                    <div class="float-right" style="display: flex; align-items: center; justify-content: center;">
+                        <img src="/images/tskgv.png" height="40px" class="mr-3">
+                        <div style="line-height: 14px; text-align: center; font-size: 12px">HAVELSAN A.Ş. Türk Silahlı Kuvvetlerini<br>Güçlendirme Vakfı'nın bir kuruluşudur.</div>
+                    </div>
+                </a>
             </div>
         </div>
 </footer>
