--- a/hugo/themes/aciklab-hugo/assets/scss/main.scss
+++ b/hugo/themes/aciklab-hugo/assets/scss/main.scss
@@ -822,8 +822,8 @@ section.pricing {
 
 .pricing .card-title {
   margin: 0.5rem 0;
-  font-size: 0.9rem;
-  letter-spacing: 0.1rem;
+  font-size: 1.2rem;
+  letter-spacing: 0.15rem;
   font-weight: bold;
 }
 
@@ -973,8 +973,8 @@ section.pricing {
   margin: 35px 0;
 }
 
-.font-weight-semibold {
-  font-weight: 600;
+.font-weight-bold {
+  font-weight: 700;
 }
 
 .fa-lg {
