--- a/hugo/themes/aciklab-hugo/layouts/partials/header.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/header.html
@@ -12,7 +12,7 @@
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
                     aria-controls="navbar" aria-expanded="false" aria-label="Menüyü aç">
-                    <span class="fa-2x feather-tagbars"></span>
+                    <i class="feather-menu fa-lg"></i>
                 </button>
             </nav>
             <nav class="row navbar navbar-expand-lg px-0 py-0">
