--- a/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
@@ -50,3 +50,32 @@ $('#contact').on('submit', function (e) {
 });
 </script>
 {{ end }}
+
+{{ if .IsHome }}
+<div class="modal" tabindex="-1" id="homePopup" tabindex="-1" aria-labelledby="homePopupLabel">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <h5 class="modal-title">Kamuda açık kaynak dönemi başlıyor...</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      
+      <div class="modal-body">
+        <a href="/iletisim" target="_blank">
+          <img src="/images/popup.jpeg" class="img-fluid">
+        </a>
+      </div>
+      
+    </div>
+  </div>
+</div>
+
+<script>
+  $(document).ready(function(){
+    $('#homePopup').modal('show');
+  });
+</script>
+{{ end }}
